@@ -4,3 +4,4 @@ Miek Gieben
 Ideas/Patches/Testing:
 Boris Goldowsky
 Rado Hrabcak
+Freek Kauffmann
