@@ -18,7 +18,7 @@ in the main tree, the first line of output will be its current state.
 .PP
 For example,
 .PP
-        hist.sh /vol/backup ~miekg/.bash_history
+        hist.sh -b /vol/backup ~miekg/.bash_history
 .PP
 produces
 .TS
@@ -46,7 +46,7 @@ an decryption key.
 .SH EXAMPLES
 Examine changes in block.c:
 .PP
-        host.sh \-d ~miekg/block.c
+        hist.sh \-d ~miekg/block.c
 
 .SH FILES
 Root of dump file system default to /vol/backup/`hostname`, but can be any
