@@ -1,3 +1,9 @@
+xx Feb 2006: 0.2.1 Miek <miek@miek.nl>
+   * Add script for use with dnofity - to automaticaly
+     backup when a harddisk is attached to the system
+   * Various typo's are fixed
+
+
 25 Jan 2006: 0.2.0 Miek <miek@miek.nl>
    * Jumped to version 0.2.0.
    Build:
